tests/snapshots/integration__integration_tests__help__help_root_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt - Git worktree management for parallel AI agent workflows

Usage: [1m[36mwt[0m [36m[OPTIONS][0m [36m[COMMAND]

[1m[32mCommands:
  [1m[36mconfig[0m  Manage configuration and shell integration
  [1m[36mstep[0m    Run individual operations
  [1m[36mhook[0m    Run configured hooks
  [1m[36mselect[0m  Interactive worktree selector
  [1m[36mlist[0m    List worktrees and their status
  [1m[36mswitch[0m  Switch to a worktree
  [1m[36mremove[0m  Remove worktree; delete branch if merged
  [1m[36mmerge[0m   Merge worktree into target branch

[1m[32mOptions:
  [1m[36m-h[0m, [1m[36m--help
          Print help (see a summary with '-h')

  [1m[36m-V[0m, [1m[36m--version
          Print version

[1m[32mGlobal Options:
  [1m[36m-C[0m[36m [0m[36m<path>
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose
          Show commands and debug info

Getting started

  wt switch --create feature    Create worktree and branch
  wt switch feature             Switch to existing worktree
  wt list                       Show all worktrees
  wt merge                      Squash, rebase, and merge to default branch

Run [2mwt config shell[0m to set up directory switching.

Docs: https://worktrunk.dev
GitHub: https://github.com/max-sixty/worktrunk
