tests/snapshots/integration__integration_tests__help__help_step_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - step
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt step - Run individual operations

Usage: [1m[36mwt step[0m [36m[OPTIONS][0m [36m<COMMAND>

[1m[32mCommands:
  [1m[36mcommit[0m    Commit changes with LLM commit message
  [1m[36msquash[0m    Squash commits since branching
  [1m[36mpush[0m      Fast-forward target to current branch
  [1m[36mrebase[0m    Rebase onto target
  [1m[36mfor-each[0m  [experimental] Run command in each worktree

[1m[32mOptions:
  [1m[36m-h[0m, [1m[36m--help
          Print help (see a summary with '-h')

[1m[32mGlobal Options:
  [1m[36m-C[0m[36m [0m[36m<path>
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose
          Show commands and debug info

Run individual git workflow operations: commits, squashes, rebases, and pushes.

[32mExamples

Commit with LLM-generated message:

  [2mwt step commit

Manual merge workflow with review between steps:

  [2mwt step commit
  [2mwt step squash
  [2m# Review the squashed commit
  [2mwt step rebase
  [2mwt step push

[32mOperations

- [2mcommit[0m — Stage and commit with LLM-generated message
- [2msquash[0m — Squash all branch commits into one with LLM-generated message
- [2mrebase[0m — Rebase onto target branch
- [2mpush[0m — Fast-forward target to current branch
- [2mfor-each[0m — [experimental] Run a command in every worktree

[32mSee also

- wt merge — Runs commit → squash → rebase → hooks → push → cleanup automatically
- wt hook — Run configured hooks
